--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "./src/index.ts",
   "scripts": {
     "build": "npx tsc",
-    "start": "npm run build && node dist/index.js",
+    "prestart": "npm run build",
+    "start": "node dist/index.js",
     "dev": "nodemon src/index.ts"
   },
   "keywords": [],
